# Nomad

./: .gitignore  BILAN.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
apps/macos/: .gitignore  Package.swift  README.md
apps/macos/Packaging/: Info.plist  make-app.sh
apps/macos/Sources/Nomad/: NomadApp.swift
apps/macos/Sources/Nomad/Model/: AppModel.swift  DaemonManager.swift  IpcClient.swift  Protocol.swift
apps/macos/Sources/Nomad/Views/: ConsoleView.swift  LayoutView.swift  MachinesView.swift  MenuBarView.swift  PlaceholderView.swift
crates/nb-app/: Cargo.toml
crates/nb-app/src/: config.rs  edge.rs  inject_thread.rs  main.rs  orchestrator.rs
crates/nb-clip/: Cargo.toml
crates/nb-clip/src/: lib.rs
crates/nb-core/: Cargo.toml
crates/nb-core/src/: codec.rs  input.rs  layout.rs  lib.rs  protocol.rs
crates/nb-input/: Cargo.toml
crates/nb-input/src/: capture.rs  inject.rs  keymap.rs  lib.rs
crates/nb-net/: Cargo.toml
crates/nb-net/src/: client.rs  discovery.rs  lib.rs  server.rs  transport.rs
crates/nb-net/tests/: loopback.rs
crates/nomad-app/: Cargo.toml
crates/nomad-app/src/: config.rs  edge.rs  inject_thread.rs  known.rs  main.rs  motion.rs  orchestrator.rs  placement.rs
crates/nomad-clip/: Cargo.toml
crates/nomad-clip/src/: lib.rs
crates/nomad-core/: Cargo.toml
crates/nomad-core/src/: codec.rs  error.rs  input.rs  layout.rs  lib.rs  protocol.rs  status.rs
crates/nomad-input/: Cargo.toml
crates/nomad-input/src/: capture.rs  inject.rs  keymap.rs  lib.rs
crates/nomad-ipc/: Cargo.toml
crates/nomad-ipc/examples/: ipcctl.rs
crates/nomad-ipc/src/: lib.rs  protocol.rs  server.rs  stub.rs
crates/nomad-ipc/tests/: loopback.rs
crates/nomad-net/: Cargo.toml
crates/nomad-net/src/: client.rs  discovery.rs  lib.rs  server.rs  transport.rs
crates/nomad-net/tests/: loopback.rs
crates/nomad-ui/: Cargo.toml
crates/nomad-ui/src/: lib.rs  tray.rs
docs/plan/: 01-ipc.md  02-app-macos.md  03-machines.md  04-layout-2d.md  ROADMAP.md
