[workspace]
resolver = "2"
members = [
    "crates/nomad-core",
    "crates/nomad-net",
    "crates/nomad-input",
    "crates/nomad-clip",
    "crates/nomad-ui",
    "crates/nomad-ipc",
    "crates/nomad-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thomasgleizes34/Nomad"

[workspace.dependencies]
# Internal crates
nomad-core = { path = "crates/nomad-core" }
nomad-net = { path = "crates/nomad-net" }
nomad-input = { path = "crates/nomad-input" }
nomad-clip = { path = "crates/nomad-clip" }
nomad-ui = { path = "crates/nomad-ui" }
nomad-ipc = { path = "crates/nomad-ipc" }

# Async runtime + networking
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }

# Discovery
mdns-sd = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
toml = "0.8"

# Input
rdev = { version = "0.5", features = ["unstable_grab"] }
enigo = "0.2"
arboard = "3"
display-info = "0.5"

# UI native (barre de menus / systray) — macOS + Windows
tao = "0.35"
tray-icon = "0.24"
tinyfiledialogs = "3"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
directories = "5"

[profile.release]
lto = true
codegen-units = 1
