[package]
name = "nb-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "no-border"
path = "src/main.rs"

[dependencies]
nb-core = { workspace = true }
nb-net = { workspace = true }
nb-input = { workspace = true }
nb-clip = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
display-info = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
