[package]
name = "nomad-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nomad"
path = "src/main.rs"

[dependencies]
nomad-core = { workspace = true }
nomad-net = { workspace = true }
nomad-input = { workspace = true }
nomad-clip = { workspace = true }
nomad-ui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
display-info = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
