[package]
name = "nomad-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nomad-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
directories = { workspace = true }
