[package]
name = "nomad-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nomad-core = { workspace = true }
tokio = { workspace = true }
mdns-sd = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
